apps/docspell/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: docspell
  labels:
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/enforce-version: latest
    pod-security.kubernetes.io/warn: restricted
    pod-security.kubernetes.io/warn-version: latest
