apps/docspell/joex.yaml
# https://kubernetes.io/docs/concepts/services-networking/service/
apiVersion: v1
kind: Service
metadata:
  name: joex
  labels:
    app.kubernetes.io/name: docspell-joex
    app.kubernetes.io/component: joex
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: docspell-joex
    app.kubernetes.io/component: joex
  ports:
    - name: rest
      port: 7878

---
# https://kubernetes.io/docs/concepts/workloads/controllers/deployment/
apiVersion: apps/v1
kind: Deployment
metadata:
  name: joex
  labels:
    app.kubernetes.io/name: docspell-joex
    app.kubernetes.io/component: joex
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: docspell-joex
      app.kubernetes.io/component: joex
  template:
    metadata:
      labels:
        app.kubernetes.io/name: docspell-joex
        app.kubernetes.io/component: joex
    spec:
      containers:
        - name: joex
          image: 'docker.io/docspell/joex:v0.41.0'
          livenessProbe:
            tcpSocket:
              port: 7878
          readinessProbe:
            tcpSocket:
              port: 7878
          ports:
            - containerPort: 7878
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["ALL"]

      securityContext:
        runAsNonRoot: true
        runAsUser: 22313
        runAsGroup: 22313
        seccompProfile:
          type: RuntimeDefault
