apps/docspell/postgres.yaml
# https://kubernetes.io/docs/concepts/services-networking/service/
apiVersion: v1
kind: Service
metadata:
  name: postgres
  labels:
    app.kubernetes.io/name: postgres
    app.kubernetes.io/component: db
spec:
  type: ClusterIP
  clusterIP: None
  ports:
    - name: postgres
      port: 5432
  selector:
    app.kubernetes.io/name: postgres
    app.kubernetes.io/component: db

---
# https://kubernetes.io/docs/concepts/workloads/controllers/statefulset/
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
  labels:
    app.kubernetes.io/name: postgres
    app.kubernetes.io/component: db
spec:
  serviceName: postgres
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: postgres
      app.kubernetes.io/component: db
  template:
    metadata:
      labels:
        app.kubernetes.io/name: postgres
        app.kubernetes.io/component: db
    spec:
      containers:
        - name: postgres
          image: "docker.io/library/postgres:16.2-alpine"
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: data
              mountPath: /data
          readinessProbe:
            exec:
              command:
                - /bin/sh
                - -c
                - 'pg_isready -U "$POSTGRES_USER" -d "$POSTGRES_DB"'
          livenessProbe:
            tcpSocket:
              port: 5432
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["ALL"]

      securityContext:
        runAsNonRoot: true
        runAsUser: 22306
        runAsGroup: 22306
        fsGroup: 22306
        seccompProfile:
          type: RuntimeDefault

  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 1Gi
