apps/docspell/restserver.yaml
# https://kubernetes.io/docs/concepts/services-networking/service/
apiVersion: v1
kind: Service
metadata:
  name: restserver
  labels:
    app.kubernetes.io/name: docspell-restserver
    app.kubernetes.io/component: restserver
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: docspell-restserver
    app.kubernetes.io/component: restserver
  ports:
    - name: rest
      port: 7880

---
# https://kubernetes.io/docs/concepts/workloads/controllers/deployment/
apiVersion: apps/v1
kind: Deployment
metadata:
  name: restserver
  labels:
    app.kubernetes.io/name: docspell-restserver
    app.kubernetes.io/component: restserver
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: docspell-restserver
      app.kubernetes.io/component: restserver
  template:
    metadata:
      labels:
        app.kubernetes.io/name: docspell-restserver
        app.kubernetes.io/component: restserver
    spec:
      containers:
        - name: restserver
          image: 'docker.io/docspell/restserver:v0.40.0'
          livenessProbe:
            tcpSocket:
              port: 7880
          readinessProbe:
            tcpSocket:
              port: 7880

          ports:
            - containerPort: 7880
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["ALL"]

      securityContext:
        runAsNonRoot: true
        runAsUser: 22312
        runAsGroup: 22312
        seccompProfile:
          type: RuntimeDefault
