apps/docspell/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: docspell
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    nginx.ingress.kubernetes.io/proxy-body-size: 100m
spec:
  tls:
    - hosts:
        - dms.mhu.dev
      secretName: docspell-tls
  rules:
    - host: dms.mhu.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: restserver
                port:
                  name: rest
